# test_task

./: .gitignore  main.py  pyproject.toml
api/: dependencies.py  serializers.py
api/v1/: analyze_rout.py
entities/: base.py  dish_statistics.py  report.py
infrastructure/: dish_statistics.py
tests/: conftest.py  tests_entities.py  tests_usecases.py
usecases/dish_statistics/: protocol.py  usecases.py
